syntax = "proto3";

package strims.devtools.v1;

option go_package = "github.com/MemeLabs/go-ppspp/pkg/apis/devtools/v1;devtools";
option java_package = "gg.strims.devtools.v1";
option swift_prefix = "SDT";

message DevToolsTestRequest {
  string name = 1;
}

message DevToolsTestResponse {
  string message = 1;
}

service DevTools {
  rpc Test(DevToolsTestRequest) returns (DevToolsTestResponse);
}
